--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,3 +52,15 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm test:e2e
+  lint:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js v16
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16                  
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run lint
